objects/Bag__c.object
<CustomObject>
    <fields>
        <fullName>Bag_Number__c</fullName>
        <description>Used in order to properly sort the bags by a numeric value</description>
        <label>Bag Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Used_Date__c</fullName>
        <description>When was this bag last used. This comes from the Bag Checkout object</description>
        <label>Last Used Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_used_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The client who used the bag last</inlineHelpText>
        <label>Last Used By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Last Used Bag</relationshipLabel>
        <relationshipName>LastUsedBag</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>What is the current state of the bag</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned</fullName>
                    <default>true</default>
                    <label>Unassigned</label>
                </value>
                <value>
                    <fullName>In Use</fullName>
                </value>
                <value>
                    <fullName>Cleaning Required</fullName>
                </value>
                <value>
                    <fullName>Damaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Swap_Comments__c</fullName>
        <description>Used to capture comments when a bag is swapped. Comments will be cleared when the bag is unassigned.</description>
        <label>Swap Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Uses_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to capture how many times this bag was used since the last cleaning.</description>
        <inlineHelpText>Used to capture how many times this bag was used since the last cleaning.</inlineHelpText>
        <label>Use Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Uses_Count__c</columns>
        <columns>Last_used_by__c</columns>
        <columns>Last_Used_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Available</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Last_used_by__c</columns>
        <columns>Last_Used_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Unassigned</value>
        </filters>
        <label>Available</label>
    </listViews>
    <listViews>
        <fullName>Black_List</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Uses_Count__c</columns>
        <columns>Last_Used_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cleaning Required,Damaged</value>
        </filters>
        <label>The Black List</label>
    </listViews>
    <listViews>
        <fullName>Candidate_Cleaning_List</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Uses_Count__c</columns>
        <columns>Swap_Comments__c</columns>
        <columns>Last_Used_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Unassigned</value>
        </filters>
        <label>Candidate Cleaning List</label>
    </listViews>
    <listViews>
        <fullName>In_Use</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Uses_Count__c</columns>
        <columns>Last_used_by__c</columns>
        <columns>Last_Used_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Use</value>
        </filters>
        <label>In Use</label>
    </listViews>
</CustomObject>